<resources>
    <string name="app_name">Cryptocurrency rate and news</string>
    <string name="top_list">Top 100</string>
    <string name="last_news">Last news</string>
    <string name="symbols">%s / %s</string>
    <string name="launch">Launch:</string>
    <string name="algorithm">Algorithm:</string>
    <string name="proof_type">Proof type:</string>
    <string name="document_type">Doc.type:</string>
    <string name="open_day">Open day</string>
    <string name="high_day">High day</string>
    <string name="low_day">Low day</string>
    <string name="open_hour">Open hour</string>
    <string name="high_hour">High hour</string>
    <string name="low_hour">Low hour</string>
    <string name="open_24_hour">Open 24 hour</string>
    <string name="high_hour_24">High hour 24</string>
    <string name="low_24_hour">Low 24 hour</string>
    <string name="change_day">Change day</string>
    <string name="change_hour">Change hour</string>
    <string name="change_24_hour">Change 24 hour</string>
    <string name="volume_day">Volume day</string>
    <string name="volume_hour">Volume hour</string>
    <string name="volume_24_hour">Volume 24 hour</string>
    <string name="change_pct_day">Change PCT day</string>
    <string name="change_pct_hour_label">Change PCT hour</string>
    <string name="change_pct24_hour">Change PCT 24 hour</string>
    <string name="market_capitalisation">Market capitalisation</string>
    <string name="market">Market</string>
    <string name="supply">Supply</string>
    <string name="last_market">Last market</string>
    <string name="source">Source:</string>
    <string name="crypto_courses">Cryptocurrency rate</string>
    <string name="crypto_news">Last news</string>
    <string name="categories">Categories:</string>
    <string name="last_trade_id">Last trade id</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>