<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_full_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_symbols_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ƀ/$" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_symbols_desc"
            tools:text="$ 46,029.9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/open_day"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_open_label"
            tools:text="$ 47,102.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/high_day"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_open_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high_day_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorGreen"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_high_day_label"
            tools:text="$ 47,390.9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/low_day"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_high_day_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low_day_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorRed"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_low_day_label"
            tools:text="$ 45,595.2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_open_label"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_open_hour_label"
            tools:text="$ 45,082.6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/high_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_open_hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorGreen"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_high_hour_label"
            tools:text="$ 44,324.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/low_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_high_hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorRed"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_low_hour_label"
            tools:text="$ 43,982.2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open24hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_24_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_open_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_open24hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_open24hour_label"
            tools:text="$ 45,082.6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high24hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/high_hour_24"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_open24hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_high24hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorGreen"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_high24hour_label"
            tools:text="$ 46,025.9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low24hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/low_24_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_high24hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_low24hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorRed"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_low24hour_label"
            tools:text="$ 43,963.9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/change_day"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_low_day_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_day_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_day_label"
            tools:text="$ -476.14" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/change_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_low_hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_change_hour_label"
            tools:text="$ 159.56" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change24hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/change_24_hour"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_low24hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change24hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_change24hour_label"
            tools:text="$ -846.20" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/volume_day"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_day_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume_day_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_volume_day_label"
            tools:text="Ƀ 6,100.37" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/volume_hour"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_change_hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_volume_hour_label"
            tools:text="Ƀ 1,286.08" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume24hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/volume_24_hour"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_change24hour_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_volume24hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintTop_toBottomOf="@id/tv_volume24hour_label"
            tools:text="Ƀ 35,556.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/fm_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_detail_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bitcoin" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>